--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -9,13 +9,13 @@
 	  <div class="container">
       <div class="row">
         <div class="col-sm-4 logo">
-          <a href="/"><img src="assets/images/Inter-Ask.png" class="img-responsive"></a>
+          <a href="/"><img src="assets/Inter-Ask.png" class="img-responsive"></a>
         </div>
 
         <div class="col-sm-8 right nav">
           <a href="/" class="selected">HOME</a>
           <a href="/about">ABOUT US</a>
-          <a href="/contact">CONTACT US</a>s
+          <a href="/contact">CONTACT US</a>
         </div>
       </div>
 
@@ -24,7 +24,7 @@
           <div class="col-sm-12">
             <h1>QUESTIONS</h1>
             <div class="line center"></div>
-            <p>LMigration to a new place is never simple, no matter how well it may be planned out. This is a safe place for refugees and asylum seekers to voice their questions and get reliable answers based on their location. 
+            <p>Migration to a new place is never simple, no matter how well it may be planned out. This is a safe place for refugees and asylum seekers to voice their questions and get reliable answers based on their location. 
 					Feel free to ask and answer, as well as give a thumbs up to helpful answers.</p>
           </div>
         </div>
@@ -71,7 +71,7 @@
           <div class="box">
             <img src="assets/icon-1.png" style="displey:block;"/>
             <br/>
-            <h1>Do you have question?</h1>
+            <h1>Do you have a question?</h1>
             <p>Whether you’re a refugee in transit, an asylum seeker, or a recognized refugee trying to integrate into your new society, this app is meant for you. It will connect you with online communities in your location, who are willing and able to answer your questions.</p>
             <div class="button" style="border-radius:2px;"><a href="/ask" style="text-decoration: none;color:#FFFFFF;">Ask a question</a></div>
           </div>
@@ -81,7 +81,7 @@
           <div class="box">
             <img src="assets/icon-2.png" style="displey:block;"/>
             <br/>
-            <h1>Do you have answer?</h1>
+            <h1>Do you have an answer?</h1>
             <p>It’s important for refugees in transit or those trying to integrate into a new society to get access to relevant information. Based on your location, you may be the best person to help them out. Answer questions or evaluate already provided answers.</p>
             <div class="button" style="border-radius:2px;"><a href="#top" style="text-decoration: none;color:#FFFFFF;">Share your answers</a></div>
           </div>
@@ -107,12 +107,12 @@
           <div class="col-sm-3 col-xs-6">
             <h1>Questions</h1>
             <b>Geek Squad</b>
-            <p>Andrej Budincevic</p>
-            <p>Djordje Jankovic</p>
+            <p>Andrej Budinčević</p>
+            <p>Đorđe Janković</p>
             <b>Big BOSS</b>
             <p>Katarina Kosmina</p>
             <b>Mighty Designer</b>
-            <p>Marko Ilic</p>
+            <p>Marko Ilić</p>
           </div>
 
           <div class="col-sm-3 col-xs-6">
@@ -125,7 +125,7 @@
           <div class="col-sm-3 col-xs-6">
             <h1>Connect</h1>
             <a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a>
-            <a href="/email">Email</a>
+            <a href="/contact">Email</a>
           </div>
 
           <div class="col-sm-3 col-xs-6">
