--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -117,15 +117,15 @@
 
           <div class="col-sm-3 col-xs-6">
             <h1>Support</h1>
-            <p>Techfugees</p>
-            <p>Our community</p>
+            <p><a href="http://techfugees.com/">Techfugees</a></p>
+            <p><a href="https://www.facebook.com/techfugeespilot/">Our community</a></p>
             
           </div>
 
           <div class="col-sm-3 col-xs-6">
             <h1>Connect</h1>
-            <a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a>
-            <a href="/contact">Email</a>
+            <p><a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a></p>
+            <p><a href="/contact">Email</a></p>
           </div>
 
           <div class="col-sm-3 col-xs-6">
