--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -130,9 +130,7 @@
 
           <div class="col-sm-3 col-xs-6">
             <h1>Communities 4 Refugees</h1>
-            <a href="">What is difference in</a>
-            <a href="">What is difference in</a>
-            <a href="">What is difference in</a>
+            <div id="js-map" style="height: 200px !important;"></div>
           </div>
         </div>
       </div>
