--- a/src/client/templates/ask.template.html
+++ b/src/client/templates/ask.template.html
@@ -1,7 +1,7 @@
 <template name="ask">
 	<div class="container">
 		 <div class="col-sm-12">
-            <h3 style="color:#05408f;">Write your problem and we will fined answer for you</h3>
+            <h3 style="color:#05408f;">Write your problem and we will find answer for you</h3>
         </div>
 	<form id="js-unesiPitanje">
 			<input type="text" id="js-question" placeholder="Write about your problem..." style="width:300px;"> <br /><br />
