--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -9,7 +9,7 @@
 	  <div class="container">
       <div class="row">
         <div class="col-sm-4 logo">
-          <a href="/"><img src="assets/Inter-Ask.png" class="img-responsive"></a>
+          <a href="/"><img src="/assets/Inter-Ask.png" class="img-responsive"></a>
         </div>
 
         <div class="col-sm-8 right nav">
