Mnogo si glup meteoru

--- a/src/client/templates/question.template.html
+++ b/src/client/templates/question.template.html
@@ -35,7 +35,7 @@
 	 <div class="row">
 		<div class="col-sm-8">  {{from.name}} - {{content}} ({{pitanje_votes}})
 		</div>
-		 {{#if pitanje_canVote}}<a href="#" id="js-upvote" style="float:right"><img src="/assets/tumbs-up.jpg" style="displey:block;"/></a>   <a href="#" id="js-downvote" style="float:right"><img src="/assets/tumbs-down.jpg" style="displey:block;"/></a>{{/if}}
+		 {{#if pitanje_canVote}}<a href="#" id="js-upvote" style="float:right"><img src="/assets/tumbs-up.jpg" style="displey:block;"/></a>&nbsp;&nbsp;<a href="#" id="js-downvote" style="float:right"><img src="/assets/tumbs-down.jpg" style="displey:block;"/></a>&nbsp;{{/if}}
 
 		 </div>
 		 </div>
