--- a/src/client/templates/contact.template.html
+++ b/src/client/templates/contact.template.html
@@ -1,12 +1,102 @@
 <template name="contact">
+	<div class="container">
+      <div class="row">
+        <div class="col-sm-4 logo">
+          <a href="/"><img src="/assets/Inter-Ask.png" class="img-responsive"></a>
+        </div>
+
+        <div class="col-sm-8 right nav">
+          <a href="/">HOME</a>
+          <a href="/about">ABOUT US</a>
+          <a href="/contact">CONTACT US</a>
+        </div>
+      </div>
+      <div class="content center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>Send Message</h1>
+            <div class="line center"></div>
+        </div>
+        </div>
+        </div>
 	<form id="js-contact">
-		Name: <input type="text" id="js-name" />
+		Name: <input type="text" id="js-name" />&nbsp;
 		Email: <input type="text" id="js-email" />
+		<br/>
 		Subject: <input type="text" id="js-subject" />
+		<br/>
 		Text: <textarea id="js-text"></textarea>
 
-		<input type="submit" value="Send!" />
+		<input type="submit" value="Send!" class="button" style="width:300px;height:50px"/>
 	</form>
 	<div id="js-poruka">
 	</div>
+</div>
+ <div class="row">
+        <div class="col-sm-6">
+          <div class="box">
+            <img src="assets/icon-1.png" style="displey:block;"/>
+            <br/>
+            <h1>Do you have a question?</h1>
+            <p>Whether you’re a refugee in transit, an asylum seeker, or a recognized refugee trying to integrate into your new society, this app is meant for you. It will connect you with online communities in your location, who are willing and able to answer your questions.</p>
+            <div class="button" style="border-radius:2px;"><a href="/ask" style="text-decoration: none;color:#FFFFFF;">Ask a question</a></div>
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <div class="box">
+            <img src="assets/icon-2.png" style="displey:block;"/>
+            <br/>
+            <h1>Do you have an answer?</h1>
+            <p>It’s important for refugees in transit or those trying to integrate into a new society to get access to relevant information. Based on your location, you may be the best person to help them out. Answer questions or evaluate already provided answers.</p>
+            <div class="button" style="border-radius:2px;"><a href="#top" style="text-decoration: none;color:#FFFFFF;">Share your answers</a></div>
+          </div>
+        </div>
+      </div>
+    
+ <div class="download-box">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>Download our open data </h1>
+            <p>We believe data deserves to be open. If you think the data this app collects might be useful for you or your organization to analyze and address issues refugees are faced with in Europe, please feel free to download and use it.</p>
+            <div class="button"><a href="/apidoc" style="text-decoration: none;color:inherit;">DOWNLOAD NOW</a></div>
+          </div>
+        </div>
+      </div>  
+    </div>
+ <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3 col-xs-6">
+            <h1>Questions</h1>
+            <b>Geek Squad</b>
+            <p>Andrej Budincevic</p>
+            <p>Djordje Jankovic</p>
+            <b>Big BOSS</b>
+            <p>Katarina Kosmina</p>
+            <b>Mighty Designer</b>
+            <p>Marko Ilic</p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Support</h1>
+            <p>Techfugees</p>
+            <p>Our community</p>
+            
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Connect</h1>
+            <a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a>
+            <a href="/email">Email</a>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Communities 4 Refugees</h1>
+            <div id="js-map" style="height: 200px !important;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 </template>
