Mnogo si glup meteoru

--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -35,7 +35,7 @@
             <a id="js-popular" href="#">MOST POPULAR</a>
             <a id="js-recent" href="#">MOST RECENT</a>
             <a id="js-urgent" href="#">MOST URGENT</a>
-            <a id="js-unanswered" href="#">UNANSWERED QUESTIONS</a>
+            <a id="js-unanswered" href="#">UNANSWERED</a>
           </div>
 
           <div class="col-sm-6 right">
