--- a/src/client/templates/about.template.html
+++ b/src/client/templates/about.template.html
@@ -1,1 +1,115 @@
-<template name="about"></template>
+<template name="about">
+<div class="container">
+      <div class="row">
+        <div class="col-sm-4 logo">
+          <a href="/"><img src="/assets/Inter-Ask.png" class="img-responsive"></a>
+        </div>
+
+        <div class="col-sm-8 right nav">
+          <a href="/" class="selected">HOME</a>
+          <a href="/about">ABOUT US</a>
+          <a href="/contact">CONTACT US</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="box">
+            <h1>About us</h1>
+            <p>Whether you’re a refugee in transit, an asylum seeker, or a recognized refugee trying to integrate into your new society, this app is meant for you. It will connect you with online communities in your location, who are willing and able to answer your questions.</p>
+            <br/>
+        </div>
+    </div>
+</div>
+<div class="col-sm-6">
+          <div class="box">
+            <img src="assets/icon-2.png" style="displey:block;"/>
+            <br/>
+            <h1>Do you have an answer?</h1>
+            <p>It’s important for refugees in transit or those trying to integrate into a new society to get access to relevant information. Based on your location, you may be the best person to help them out. Answer questions or evaluate already provided answers.</p>
+            <div class="button" style="border-radius:2px;"><a href="#top" style="text-decoration: none;color:#FFFFFF;">Share your answers</a></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="content center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>QUESTIONS</h1>
+            <div class="line center"></div>
+            <p>Migration to a new place is never simple, no matter how well it may be planned out. This is a safe place for refugees and asylum seekers to voice their questions and get reliable answers based on their location. 
+					Feel free to ask and answer, as well as give a thumbs up to helpful answers.</p>
+          </div>
+        </div>
+      </div>
+  
+   <div class="row">
+        <div class="col-sm-6">
+          <div class="box">
+            <img src="assets/icon-1.png" style="displey:block;"/>
+            <br/>
+            <h1>Do you have a question?</h1>
+            <p>Whether you’re a refugee in transit, an asylum seeker, or a recognized refugee trying to integrate into your new society, this app is meant for you. It will connect you with online communities in your location, who are willing and able to answer your questions.</p>
+            <div class="button" style="border-radius:2px;"><a href="/ask" style="text-decoration: none;color:#FFFFFF;">Ask a question</a></div>
+          </div>
+        </div>
+</div>
+        <div class="col-sm-6">
+          <div class="box">
+            <img src="assets/icon-2.png" style="displey:block;"/>
+            <br/>
+            <h1>Do you have an answer?</h1>
+            <p>It’s important for refugees in transit or those trying to integrate into a new society to get access to relevant information. Based on your location, you may be the best person to help them out. Answer questions or evaluate already provided answers.</p>
+            <div class="button" style="border-radius:2px;"><a href="#top" style="text-decoration: none;color:#FFFFFF;">Share your answers</a></div>
+          </div>
+        </div>
+      </div>
+    
+
+    <div class="download-box">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>Download our open data </h1>
+            <p>We believe data deserves to be open. If you think the data this app collects might be useful for you or your organization to analyze and address issues refugees are faced with in Europe, please feel free to download and use it.</p>
+            <div class="button"><a href="/apidoc" style="text-decoration: none;color:inherit;">DOWNLOAD NOW</a></div>
+          </div>
+        </div>
+      </div>  
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3 col-xs-6">
+            <h1>Questions</h1>
+            <b>Geek Squad</b>
+            <p>Andrej Budinčević</p>
+            <p>Đorđe Janković</p>
+            <b>Big BOSS</b>
+            <p>Katarina Kosmina</p>
+            <b>Mighty Designer</b>
+            <p>Marko Ilić</p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Support</h1>
+            <p><a href="http://techfugees.com/">Techfugees</a></p>
+            <p><a href="https://www.facebook.com/techfugeespilot/">Our community</a></p>
+            
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Connect</h1>
+            <p><a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a></p>
+            <p><a href="/contact">Email</a></p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <h1>Communities 4 Refugees</h1>
+            <div id="js-map" style="height: 200px !important;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+</template>
