Mnogo si glup meteoru

--- a/src/client/templates/contact.template.html
+++ b/src/client/templates/contact.template.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-xs-6">
-            <h1>Questions</h1>
+            <h1>Our team</h1>
             <b>Geek Squad</b>
             <p>Andrej Budincevic</p>
             <p>Djordje Jankovic</p>
