--- a/src/client/templates/about.template.html
+++ b/src/client/templates/about.template.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="col-sm-8 right nav">
-          <a href="/" class="selected">HOME</a>
+          <a href="/">HOME</a>
           <a href="/about">ABOUT US</a>
           <a href="/contact">CONTACT US</a>
         </div>
@@ -16,18 +16,21 @@
         <div class="col-sm-6">
           <div class="box">
             <h1>About us</h1>
-            <p>Whether you’re a refugee in transit, an asylum seeker, or a recognized refugee trying to integrate into your new society, this app is meant for you. It will connect you with online communities in your location, who are willing and able to answer your questions.</p>
+            <p>Access to reliable information is crucial for refugees, whether they're transiting a country, applying for asylum, or trying to integrate into a new society.
+			We wanted to create a safe space for refugees to voice their questions anonymously and get reliable answers quickly based on their location. In order to do so, we decided to tap into existing online communities, which willing and able to answer the queries of refugees. </p>
+
+			<p>Additionally, we decided to open our data, feel free to download it and take the next help in analyzing issues refugees are faced with and designing solutions.</p>
+
+			<p>Ask anything you need to know or check out previous questions and answers.
+			The answers are rated by users with thumbs up and thumbs down, according to their perceived helpfulness and reliability.</p>
             <br/>
         </div>
     </div>
-</div>
+
 <div class="col-sm-6">
           <div class="box">
-            <img src="assets/icon-2.png" style="displey:block;"/>
-            <br/>
-            <h1>Do you have an answer?</h1>
-            <p>It’s important for refugees in transit or those trying to integrate into a new society to get access to relevant information. Based on your location, you may be the best person to help them out. Answer questions or evaluate already provided answers.</p>
-            <div class="button" style="border-radius:2px;"><a href="#top" style="text-decoration: none;color:#FFFFFF;">Share your answers</a></div>
+           
+            
           </div>
         </div>
       </div>
@@ -35,14 +38,42 @@
       <div class="content center">
         <div class="row">
           <div class="col-sm-12">
-            <h1>QUESTIONS</h1>
+            <h1>OUR TEAM</h1>
             <div class="line center"></div>
-            <p>Migration to a new place is never simple, no matter how well it may be planned out. This is a safe place for refugees and asylum seekers to voice their questions and get reliable answers based on their location. 
-					Feel free to ask and answer, as well as give a thumbs up to helpful answers.</p>
+            
+        </div>
+      </div>
+</div>
+       <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3 col-xs-6">
+            <img src="/assets/andrej.JPG" class="img-responsive" style="border-radius: 70%;">
+            <p>Andrej Budicevic</p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <img src="/assets/djole.JPG" class="img-responsive" style="border-radius: 70%;">
+            <p>Djordje Jankovic</p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+            <img src="/assets/mare.JPG" class="img-responsive" style="border-radius: 70%;">
+            <p>Marko Ilic</p>
+          </div>
+
+          <div class="col-sm-3 col-xs-6">
+           <img src="/assets/kiki.JPG" class="img-responsive" style="border-radius: 70%;">
+           <p>Katarina Kosmina</p>
           </div>
         </div>
       </div>
-  
+    </div>
+</div>
+
+
+
+  <!--Ove de deli-->
    <div class="row">
         <div class="col-sm-6">
           <div class="box">
@@ -53,7 +84,7 @@
             <div class="button" style="border-radius:2px;"><a href="/ask" style="text-decoration: none;color:#FFFFFF;">Ask a question</a></div>
           </div>
         </div>
-</div>
+
         <div class="col-sm-6">
           <div class="box">
             <img src="assets/icon-2.png" style="displey:block;"/>
@@ -82,7 +113,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-xs-6">
-            <h1>Questions</h1>
+            <h1>Our team</h1>
             <b>Geek Squad</b>
             <p>Andrej Budinčević</p>
             <p>Đorđe Janković</p>
