--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-xs-6">
-            <h1>Questions</h1>
+            <h1>Our team</h1>
             <b>Geek Squad</b>
             <p>Andrej Budinčević</p>
             <p>Đorđe Janković</p>
